Service title: set the page title container width to 65% to avoid overlapping

--- a/app/assets/stylesheets/_monsoon_theme.scss
+++ b/app/assets/stylesheets/_monsoon_theme.scss
@@ -1443,6 +1443,7 @@ footer,
       font-family: $font-family-sans-serif-light;
       padding-top: $line-height-computed / 3;
       display: flex;
+      width: 65%;
 
       > * {
         margin-right: 0.25em;
